--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.2.5",
+    "aos": "^2.3.4",
     "firebase": "^10.12.5",
     "formik": "^2.4.6",
     "framer-motion": "^10.12.16",
@@ -28,6 +29,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20.2.4",
     "@types/react": "^18.0.28",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
