--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.0.18",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@reduxjs/toolkit": "^2.2.5",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "firebase": "^10.12.5",
     "formik": "^2.4.6",
     "framer-motion": "^10.12.16",
+    "mercadopago": "^2.0.15",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
